feat: minor adjustments

--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -7,9 +7,12 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 80
       targetPort: http
       protocol: TCP
       name: http
+      {{- if eq .Values.service.type "NodePort" }}
+      nodePort: {{ .Values.service.port }}
+      {{- end }}
   selector:
     {{- include "nginx.selectorLabels" . | nindent 4 }}
