--- a/customform.yaml
+++ b/customform.yaml
@@ -73,12 +73,12 @@ spec:
   actions:
     - template:
         id: submit
-        apiVersion: composition.krateo.io/v1-1-15
+        apiVersion: composition.krateo.io/v0-1-0
         verb: POST
-        resource: nginxs
+        resource: nginxes
         payloadToOverride:
         - name: metadata.name
-          value: ${ git.toRepo.name }
+          value: ${ "nginx" }
         - name: metadata.namespace
           value: ${ "nginx-system" }
   app:
@@ -90,7 +90,7 @@ spec:
       - app
   api:
   - name: getCRD
-    path: "/apis/apiextensions.k8s.io/v1/customresourcedefinitions/nginxs.composition.krateo.io"
+    path: "/apis/apiextensions.k8s.io/v1/customresourcedefinitions/nginxes.composition.krateo.io"
     verb: GET
     headers:
     - 'Accept: application/json'
